# GameDataStream

./: CMakeLists.txt  README.md
include/: gamedata-stream.h
include/binary-io/: data-stream.h
src/: gamedata-stream.cpp
src/binary-io/: data-stream.cpp
